--- a/index.html
+++ b/index.html
@@ -1,31 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<!--Created by: Sarah Lethbridge -->
+<!--Created by: Sarah Letbridge
+     Student number: 301211963-->
+
+<html>
 <head>
-<title>Sarah Lethbridge - COMP213(SEC.006) - Home Page</title>
-<meta charset="utf=8">
+<title>Sarah Lethbridge - Home Page</title>
 </head>
-<body style="font-family:verdana; color:gray; background-color:lavender;>
+<body style="font-family:Verdana; color:#a04747; background: linear-gradient(to bottom, #00002e 0%, #666699 100%);">
 <div style="width:980px; margin-left:auto; margin-right:auto;">
-<header>
-<img src="logo.gif" alt="Setas logo">
-<h3>COMP213 - Web Interaface Design - Fall 2021</h3>
-<h4>Student Name: Sarah Lethbridge - Student#:301211963</h4>
-</header>
-<main>
-&nbsp; Some of my favorite things to do are:
-<ul>
-<li>Reading</li>
-<li>Playing video games</li>
-<li>Playing cards</li>
-<li>Watch movies</li>
-<li>Listen to music</li>
-<li>Play instruments</li>
+<img src="logo.gif" alt="Moon phase" height="105" width="980">
+<hr style="border-style:solid; border-color:rgb(61, 0, 34); border-width:2px">
+<h3>COMP213 - Web Interface Design - Fall 2021</h3>
+<h4>Student Name: Sarah Lethbridge - 30121193</h4>
+<p>I am a student in Software Engineering at Centennial College.<br> Previously I studied at Algonquin College in Ottawa, ON.</p>
+<img src="contellation.gif"; alt="zodiac sign" style="float:right;" height="228" width="221">
+<p>We are supposed to drink lots of H<sub>2</sub>O to stay well hydrated.</p>
+<p>My preferred brand of mobile devices is Samsung<sup>&reg;</sup>.</p>
+<p>One of my favorite quotes is:</p>
+<blockquote style="font-family:brush-script;">
+<i>The world is not in your books and maps. It is out there.</i><br>~~~~~J.R.R. Tolkien~~~~~
+</blockquote>
+<p><i></i><span style="font-family:cursive;">Here are some of y favorite things to do:</span></p>
+<ul style="list-style-image:url('moon.gif');">
+<li>Read fiction books</li>
+<li>Propagating plants</li>
+<li>Camping</li>
+<li>Playing guitar</li>
+<li>Traveling</li>
+<li>Sleeping in</li><i>
 </ul>
-</main>
-<footer>
-<h6>&copy;&nbsp Copyright Sarah Lethbridge - Student#: 301211963 - COMP213 - Fall 2021</h6>
-</footer>
+<p><i>
+<span style="font-family:cursive;">Here are some of my favorite books:</span></p>
+<ul style="list-style-image:url('moon.gif');">
+<li>The Hobbit</li>
+<li>The Time Machine</li>
+<li>Interview with the Vampire</li>
+<li>The Hitchhikers Guide to the Galaxy</li>
+<li>Harry Potter</li>
+<li>Zodiac Academy</li></i>
+</ul>
+<img src="reading.gif"; alt="book" style="float:bottom;" height="228" width="221">
+<a href="file:///C:/Users/Sarah/Documents/1%20Centennial-Software%20Engineering/Web%20Interface/COMP213Week3/Assignment2/Assignment2.html">Visit this link to learn about the protected areas issues</a>
+<hr style="border-style:solid; border-color:rgb(61, 0, 34); border-width:2px">
+<h6>&copy;&nbsp;&nbsp;&nbsp;Copyright Sarah Lethbridge - COMP213 - Fall2021</h6>
+<hr style="border-style:solid; border-color:rgb(61, 0, 34); border-width:2px">
 </div>
 </body>
 </html>
